<resources>
    <string name="app_name">Trecker</string>
    <string name="task_button">Задачи</string>>
    <string name="trecker_button">Отслеживаемое</string>
    <string name="settings_button">Настройки</string>
    <string name="add_task_button">Добавить задачу</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="TaskNameHint">Название</string>
    <string name="TaskEditHint">Начните вводить</string>
    <string name="StatusHinter">Выберитие статус задачи</string>
    <string name="SaveButton">Сохранить</string>

    <string-array name="task_status">
        <item>Важное и срочное</item>
        <item>Важное и несрочное</item>
        <item>Неважное, но срочное</item>
        <item>Неважное и несрочное</item>
    </string-array>
</resources>