<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingTask">

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/task_button_ad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/task_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/trecker_button_ad"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/trecker_button"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/settings_button_ad"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/settings_button"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/return_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="235dp"
        android:layout_height="44dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/TaskNameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="384dp"
        android:layout_height="466dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText" />

</androidx.constraintlayout.widget.ConstraintLayout>