<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskShow">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="408dp"
        android:layout_height="63dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/task_button_ts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"

            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/task_button"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/trecker_button_ts"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/trecker_button"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />

        <Button
            android:id="@+id/settings_button_ts"
            android:layout_width="wrap_content"
            android:layout_height="63dp"
            android:backgroundTint="@color/ButtonBackground"
            android:text="@string/settings_button"
            app:cornerRadius="10sp"
            app:strokeWidth="1sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/task_name"
        android:layout_width="284dp"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_description"
        android:layout_width="354dp"
        android:layout_height="518dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_name" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/Red"
        android:text="Удалить"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_description" />

    <Button
        android:id="@+id/change_button"
        android:layout_width="115dp"
        android:layout_height="40dp"
        android:layout_marginTop="76dp"
        android:backgroundTint="@color/ButtonBackground"
        android:text="Изменить"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.821"
        app:layout_constraintStart_toEndOf="@+id/delete_button"
        app:layout_constraintTop_toBottomOf="@+id/task_description" />

</androidx.constraintlayout.widget.ConstraintLayout>